--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "node bot.js"
   },
   "dependencies": {
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "openai": "^4.56.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
