🚧 adding previous chunk text as prompt for better transcription continuity

--- a/env.js.example
+++ b/env.js.example
@@ -14,3 +14,9 @@ export const INIT_USERS = [
 ];
 
 export const CHUNK_LENGTH_MINUTES = 10;
+
+export const MAX_PROMPT_LENGTH = 256; // Max length of transcribed text of previously chunk to send as prompt
+
+export const TEMP_FILES_DIR = 'temp';
+
+export const STRANGER_LOGS_FILENAME = 'strangers.log';
