♻️ refactoring: splited to api and cloud transcribrion

--- a/env.js.example
+++ b/env.js.example
@@ -20,3 +20,10 @@ export const MAX_PROMPT_LENGTH = 256; // Max length of transcribed text of previ
 export const TEMP_FILES_DIR = 'temp';
 
 export const STRANGER_LOGS_FILENAME = 'strangers.log';
+
+export const SPEECH_RECOGNITION_METHODS = {
+  OPENAI_API: 'openai_api',
+  WHISPER_CLOUD: 'whisper_cloud',
+};
+
+export const SELECTED_METHOD = SPEECH_RECOGNITION_METHODS.OPENAI_API;
