--- a/env.js.example
+++ b/env.js.example
@@ -26,4 +26,6 @@ export const SPEECH_RECOGNITION_METHODS = {
   WHISPER_CLOUD: 'whisper_cloud',
 };
 
-export const SELECTED_METHOD = SPEECH_RECOGNITION_METHODS.OPENAI_API;
+export const SELECTED_METHOD = SPEECH_RECOGNITION_METHODS.WHISPER_CLOUD;
+
+export const IS_VIDEO_SUPPORTED = false;
